--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".view.UniverseCreated"></activity>
+        <activity android:name=".view.MainActivity"></activity>
         <activity
             android:name=".view.ConfigurationActivity"
             android:label="@string/app_name">
