--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name=".view.UniverseCreated"></activity>
         <activity android:name=".view.MainActivity"></activity>
         <activity android:name=".view.MapsActivity"></activity>
+        <activity android:name=".view.MarketActivity"></activity>
         <activity
             android:name=".view.ConfigurationActivity"
             android:label="@string/app_name">
